--- a/index.html
+++ b/index.html
@@ -54,8 +54,15 @@
                                 <h1 class="display-5 fw-bolder text-white mb-2">Se busca profe</h1>
                                 <p class="lead fw-normal text-white-50 mb-4">Sistema Web para arrendar clases, con profesores cualificados!</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Ver precios</a>
-                                    <a class="btn btn-outline-light btn-lg px-4" href="#!">Iniciar session</a>
+                                    <div class="col" href="#features">
+                                        <a  class="col btn btn-seba-blue" style="padding: 10px 15px;" role="button" href="#features">Que Ofrecemos</a>
+                                    </div>
+                                    <div class="col">
+                                        <a class="col btn btn-seba-blue" style="padding: 10px 15px;" role="button" href="">Iniciar sesión</a>
+                                    </div>
+                                    <div class="col">
+                                        <a class="col btn btn-seba-blue" style="padding: 10px 15px;" role="button" href="">Clases</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
