--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
         <title>DuocUC</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="img/logo.png" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -58,7 +56,7 @@
                                         <a  class="col btn btn-seba-blue" style="padding: 10px 15px;" role="button" href="#features">Que Ofrecemos</a>
                                     </div>
                                     <div class="col">
-                                        <a class="col btn btn-seba-blue" style="padding: 10px 15px;" role="button" href="">Iniciar sesión</a>
+                                        <a class="col btn btn-seba-blue" style="padding: 10px 15px;" role="button" onclick="logine()">Iniciar sesión</a>
                                     </div>
                                     <div class="col">
                                         <a class="col btn btn-seba-blue" style="padding: 10px 15px;" role="button" href="">Clases</a>
@@ -234,7 +232,8 @@
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <!-- sweet alert-->
+        <script src="js/sweetalert2.js"></script>
+        <script src="js/load.js"></script>
     </body>
 </html>
