--- a/tienda.html
+++ b/tienda.html
@@ -49,7 +49,7 @@
             <section class="bg-light py-5">
                 <div class="container px-5 my-5">
                     <div class="text-center mb-5">
-                        <h1 class="fw-bolder">Puedes selecionar</h1>
+                        <h1 style="color: black !important;" class="fw-bolder">Puedes selecionar</h1>
                         <p class="lead fw-normal text-muted mb-0">Puedes ver el </p>
                     </div>
                     <div class="row gx-5 justify-content-center">
