--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li> -->
                             <!-- <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li> -->
                             <li class="nav-item"><a class="nav-link" href="tienda.html">Clases</a></li>
-                            <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li> -->
                             <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
@@ -55,9 +55,6 @@
                                     </div>
                                     <div class="col">
                                         <a class="col btn btn-seba-blue" style="padding: 10px 15px;" role="button" onclick="logine()">Iniciar sesión</a>
-                                    </div>
-                                    <div class="col">
-                                        <a class="col btn btn-seba-blue" style="padding: 10px 15px;" role="button" href="">Clases</a>
                                     </div>
                                 </div>
                             </div>
