--- a/tienda.html
+++ b/tienda.html
@@ -12,6 +12,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link rel="icon" type="image/x-icon" href="img/logo.png" />
     </head>
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
@@ -23,10 +24,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">Sobre SBP</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="about.html">Sobre SBP</a></li> -->
                             <!-- <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> -->
                             <!-- <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li> -->
-                            <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li> -->
                             <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
@@ -46,10 +47,10 @@
                 </div>
             </nav>
             <!-- Pricing section-->
-            <section class="bg-light py-5">
+            <section style="color: var(--bs-body-color)" class=" py-5">
                 <div class="container px-5 my-5">
                     <div class="text-center mb-5">
-                        <h1 style="color: black !important;" class="fw-bolder">Puedes selecionar</h1>
+                        <h1 style="color: rgb(255, 255, 255) !important;" class="fw-bolder">Puedes selecionar</h1>
                         <p class="lead fw-normal text-muted mb-0">Puedes ver el </p>
                     </div>
                     <div class="row gx-5 justify-content-center">
