--- a/tienda.html
+++ b/tienda.html
@@ -61,9 +61,9 @@
                                 <div class="card-body">
                                   <h5 class="card-title">Matematicas</h5>
                                   <p class="card-text">Clases interactivas de mateticas distintos niveles!.</p>
-                                  <a href="#" class="btn btn-primary">Basico</a>
-                                  <a href="#" class="btn btn-warning">Medio</a>
-                                  <a href="#" class="btn btn-success">Avanzado</a>
+                                  <a onclick="assign()"  class="btn btn-primary">Basico</a>
+                                  <a onclick="assign()" class="btn btn-warning">Medio</a>
+                                  <a onclick="assign()" class="btn btn-success">Avanzado</a>
                                 </div>
                               </div>
                         </div>
@@ -75,9 +75,9 @@
                                     <div class="card-body">
                                       <h5 class="card-title">Historia</h5>
                                       <p class="card-text">Clases interactivas de Historia distintos niveles!.</p>
-                                        <a href="#" class="btn btn-primary">Basico</a>
-                                        <a href="#" class="btn btn-warning">Medio</a>
-                                        <a href="#" class="btn btn-success">Avanzado</a>
+                                        <a onclick="assign()" class="btn btn-primary">Basico</a>
+                                        <a onclick="assign()" class="btn btn-warning">Medio</a>
+                                        <a onclick="assign()" class="btn btn-success">Avanzado</a>
                                     </div>
                                   </div>
                             </div>
@@ -90,9 +90,9 @@
                                     <div class="card-body">
                                       <h5 class="card-title">Ingles</h5>
                                       <p class="card-text">Clases interactivas de Ingles distintos niveles!.</p>
-                                      <a href="#" class="btn btn-primary">Basico</a>
-                                    <a href="#" class="btn btn-warning">Medio</a>
-                                    <a href="#" class="btn btn-success">Avanzado</a>
+                                      <a onclick="assign()" class="btn btn-primary">Basico</a>
+                                    <a onclick="assign()" class="btn btn-warning">Medio</a>
+                                    <a onclick="assign()" class="btn btn-success">Avanzado</a>
                                     </div>
                                   </div>
                             </div>
@@ -120,5 +120,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="js/sweetalert2.js"></script>
+        <script src="js/load.js"></script>
     </body>
 </html>
